feat(clean): clean some code before fix notifier cache